--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+ *{
+     /* font-family: 'Bangla', sans-serif; */
+    font-family: 'Poppins', sans-serif;
+    padding: 0;
+} 
 
 html{
     scroll-behavior: smooth;
